# vilogger

./: CMakeLists.txt  README.md  codecoverage.sh
core/: CMakeLists.txt
core/src/: vilogger.cpp  viloglevel.cpp
core/src/inc/: ivilogger.hpp  iviloglevel.hpp  vilogger.hpp  viloglevel.hpp
tests/: tst_vilogger.cpp  tst_viloglevel.cpp
tests/main/: main.cpp
tests/mock/: viloggermock.hpp  viloglevelmock.hpp
